# Course-CPP

./: readme.md
_notes/: Занятие 1 (09.02.2023).md  Занятие 10 (14.03.2023).md  Занятие 11 (17.03.2023).md  Занятие 12 (21.03.2023).md  Занятие 13 (24.03.2023).md  Занятие 14 (24.04.2023).md  Занятие 15 (26.04.2023).md  Занятие 16 (01.05.2023).md  Занятие 17 (03.05.2023).md  Занятие 18 (08.05.2023).md  Занятие 19 (10.05.2023).md  Занятие 2 (14.02.2023).md  Занятие 20 (15.05.2023).md  Занятие 21 (18.05.2023).md  Занятие 22 (22.05.2023).md  Занятие 23 (24.05.2023).md  Занятие 24 (29.05.2023).md  Занятие 25 (31.05.2023).md  Занятие 26 (05.06.2023).md  Занятие 27 (07.06.2023).md  Занятие 28 (12.06.2023).md  Занятие 29 (14.06.2023).md  Занятие 3 (17.02.2023).md  Занятие 30 (19.06.2023).md  Занятие 31 (28.06.2023).md  Занятие 32 (03.07.2023).md  Занятие 4 (21.02.2023).md  Занятие 5 (24.02.2023).md  Занятие 6 (28.02.2023).md  Занятие 7 (03.03.2023).md  Занятие 8 (07.03.2023).md  Занятие 9 (10.03.2023).md
lesson (Debuggin and Testing)/: lesson-debuggin-testing-struct.md
lesson1(Introduction)/: lesson-introduction-struct.md  lesson-introduction.md
lesson1(Introduction)/code/: myFirstCodeOnCpp  myFirstCodeOnCpp.cpp
lesson13(templates)/hw/: CMakeLists.txt  filter.cpp  max-variadic.cpp  max.cpp  pair.cpp  queue.cpp
lesson14(smart-pointers)/code/: CMakeLists.txt  main.cpp  sharptr-ex-deleter.cpp  sharptr-ex.cpp  smartptr.cpp  test.cpp  uniqptr-ex.cpp  uniqptr-ex2.cpp  weakptr-ex.cxx
lesson14(smart-pointers)/hw/: CMakeLists.txt
lesson14(smart-pointers)/hw-Artem/: smartptr.hpp  test-smartptr.cpp
lesson15(STL-containers)/code/: CMakeLists.txt
lesson15(STL-containers)/hw-Artem/: CMakeLists.txt  main.cpp
lesson16(STL-iterators)/: lesson-stl-iterators.md
lesson16(STL-iterators)/code/: CMakeLists.txt  for-input.cpp  for-tree.cpp  move-ex.cpp  my-iterator.cpp  ostream-iterator.cpp
lesson16(STL-iterators)/hw/: 2_my_container.cpp
lesson16(STL-iterators)/hw-Artem/: 1_even_vector.cpp  3_delete_vector.cpp  CMakeLists.txt
lesson16(STL-iterators)/hw-Artem/TextEditor_v2/: TextEditor.cpp
lesson16/hw/: 1_odd_vector.cpp  2_custom_Queue.hpp  2_custom_Stack.hpp  2_custom_iterators.cpp  3_delete_vector.cpp  4_tree_iterator.cpp  CMakeLists.txt
lesson17(STL-algorithms)/: lesson-stl-algorithms.md
lesson17(STL-algorithms)/code/: CMakeLists.txt  accumulate.cpp  example-alg.cpp  functor.cpp  measure.cpp  negate.cpp  policy.cpp  transform.cpp
lesson17(STL-algorithms)/hw-Artem/: 2_custom_Queue.hpp  2_custom_Stack.hpp  2_custom_iterators.cpp
lesson18(20)/: lesson-file-input-output-struct.md  lesson-file-input-output.md  material.md
lesson18(20)/code/: file-count-lines.cpp  file-exceptions.cpp  filedir.cpp
lesson18(SOLID, DRY)/: lesson-solid-struct.md  lesson-solid.md  material.md
lesson18(SOLID, DRY)/code/: CMakeLists.txt  barb_liskov.cpp  first-ex-solid.cpp
lesson19(18)/: lesson-solid.md
lesson19(18)/code/: all-principle.cpp
lesson19(Move semantic)/: lesson19-move-semantic-struct.md  lesson19-move-semantic.md
lesson19(Move semantic)/code/: CMakeLists.txt  RVO.cpp  forward.cpp  recomendation.cpp  rvalue-ex1.cpp  rvalue-ex2.cpp
lesson19(Move semantic)/hw-Artem/: CMakeLists.txt  DuplicatesDestroyer.cpp  checks.hpp  getHash.hpp
lesson20(File Input and Output)/: lesson-file-input-output.md
lesson20(File Input and Output)/code/: CMakeLists.txt  exceptions.cpp  file-count-lines.cpp  filedir.cpp  read-write.cpp  simple.cpp
lesson20(File Input and Output)/hw-Artem/: 1-countwords.cpp  2-copy.cpp  3-binary.cpp  CMakeLists.txt
lesson21(C++11 features)/: lesson-cpp11-chrono-lib.md  lesson-cpp11-features-struct.md  lesson-cpp11-features.md
lesson21(C++11 features)/code/: CMakeLists.txt  auto.cpp  chrono.cpp  chrono2.cpp  constexpr.cpp  delegateconst.cpp  forloop.cpp  function.cpp  main.cpp  nullptr.cpp  observable.cpp
lesson21(C++11 features)/hw-Artem/: CMakeLists.txt  DuplicatesDestroyer.cpp  DuplicatesDestroyer.hpp  getHash.hpp  main-Duplicates.cpp
lesson22(C++14 features)/: lesson-cpp14-fetures.md
lesson25(Thread Management)/: lesson-thread-management-part1.md  lesson-thread-management-part2.md  lesson-thread-management-struct.md
lesson25(Thread Management)/code/: CMakeLists.txt  atomic1.cpp  convar1.cpp  convar2.cpp  convar3.cpp  deadlock-decision.cpp  deadlock.cpp  mutex1.cpp  thread1.cpp
lesson25(Thread Management)/hw-Artem/: CMakeLists.txt  TODO.txt
lesson25(Thread Management)/hw-Artem/duplicatesHW/: DuplicatesDestroyer.cpp  DuplicatesDestroyer.hpp  main-Duplicates.cpp
lesson25(Thread Management)/hw-Artem/futureHW/: future_vec_pool.cpp  future_vec_queue.cpp  safe_container.cpp
lesson25(Thread Management)/hw-Artem/threadsHW/: predicate_arithmetic.h  randvec_creator.h  thread_handler.h  threadsHW.cpp
lesson26(Atomic operations)/: lesson-atomic-operation.md  lesson-atomic-operations-struct.md
lesson28(Design Patterns)/: lesson-design-patterns-struct.md  lesson-design-patterns.md
lesson29(Networking)/: lesson-network-struct.md  lesson-network.md
lesson29(Networking)/hw-Artem/network-grpc/: CMakeLists.txt  README.md  conanfile.txt  log.txt
lesson29(Networking)/hw-Artem/network-grpc/protos/: simplenet.proto
lesson29(Networking)/hw-Artem/network-grpc/src/: Logger.cpp  Logger.hpp  client.cpp  server.cpp
lesson29(Networking)/hw-Artem/network-nolib/: CMakeLists.txt  client1.cpp  server1.cpp
lesson30(Debug, Testing)/: lesson-debug-test-struct.md  lesson-debug-test.md
lesson30(Debug, Testing)/code/gtest-ex/: CMakeLists.txt  mock.hpp  test-fixture.cpp  test-mock.cpp  test-param.cpp  test.cpp
lesson31(Libs, CMake, Conan)/: lesson-cmake-conan-struct.md  lesson-cmake-conan.md
lesson31(Libs, CMake, Conan)/code/conan-python/use-package/: CMakeLists.txt  conanfile.py  main.cpp
lesson31(Libs, CMake, Conan)/hw-Artem/conan1.60.1_ExternLib/: CMakeLists.txt
lesson31(Libs, CMake, Conan)/hw-Artem/conan1.60.1_ExternLib/src/: main.cpp
lesson32(C++20 features)/: lesson-cpp20-features-struct.md  lesson-cpp20-features.md
(+59 files in other folders)
