cmake_minimum_required(VERSION 3.0.0)
project(iterators VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 11)

# add_executable(iterators main.cpp)
# add_executable(for-tree for-tree.cpp)
# add_executable(for-loop for-loop.cpp)
# add_executable(for-input for-input.cpp)
add_executable(for-container for-container.cpp)
# add_executable(ostream-iterator ostream-iterator.cpp)
# add_executable(my-iterator my-iterator.cpp)
# add_executable(move-ex move-ex.cpp)

