cmake_minimum_required(VERSION 3.0.0)
project(out VERSION 0.1.0)



add_executable(TextEditor ./TextEditor_v3/main.cpp ./TextEditor_v3/TextEditor.cpp)
# add_executable(1_odd_vector 1_odd_vector.cpp)
# add_executable(2_custom_iterators 2_custom_iterators.cpp)
# add_executable(3_delete_vector 3_delete_vector.cpp)
# add_executable(4_tree_iterator 4_tree_iterator.cpp)