cmake_minimum_required(VERSION 3.0.0)
project(hw27 VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)

# add_executable(duplicatesHW ./duplicatesHW/main-Duplicates.cpp ./duplicatesHW/DuplicatesDestroyer.cpp)

# add_executable(future_vec_pool ./futureHW/future_vec_pool.cpp)
# add_executable(future_vec_queue ./futureHW/future_vec_queue.cpp)
# add_executable(safe_container ./futureHW/safe_container.cpp)
